Adding bionetwork side drawer

--- a/community/browser/app/views/partials/nav.jade
+++ b/community/browser/app/views/partials/nav.jade
@@ -11,5 +11,7 @@
       a.icon-star(ng-click='toggleDrawer("scripts")')
     li(ng-class='{active: showingDrawer("info") }')
       a.icon-info-sign(ng-click='toggleDrawer("info")')
+    li(ng-class='{active: showingDrawer("bionetwork") }')
+       a.icon-bold(ng-click='toggleDrawer("bionetwork")')
     li.bottom(ng-class='{active: showingDrawer("credits") }')
       a(ng-click='toggleDrawer("credits")') &copy;
