--- a/community/browser/app/views/partials/drawer.jade
+++ b/community/browser/app/views/partials/drawer.jade
@@ -5,6 +5,8 @@
     include drawer-scripts
   div.pane.animate-drawer(ng-switch-when="info")
     include drawer-info
+  div.pane.animate-drawer(ng-switch-when="bionetwork")
+    include drawer-bionetwork
   div.pane.animate-drawer(ng-switch-when="credits")
     include drawer-credits
   div.pane.animate-drawer(ng-switch-default)
